2007-01-07  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-set-password-dialog-private.h:
	* src/hildon-set-password-dialog.c:
	* src/hildon-set-password-dialog.h: Cleaning up the
	HildonSetPasswordDialog.

2007-01-07  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-get-password-dialog-private.h:
	* src/hildon-get-password-dialog.c:
	* src/hildon-get-password-dialog.h: Cleaning up the
	HildonGetPasswordDialog.

2007-01-05  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-font-selection-dialog.c:
	* src/hildon-font-selection-dialog.h:
	* src/hildon-font-selection-dialog-private.h: Cleaning up the
	HildonFontSelectionDialog. 

2007-01-05  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-login-dialog.c:
	* src/hildon-login-dialog.h:
	* src/Makefile.am:
	* src/hildon-login-dialog-private.h:
	* src/hildon-widgets.h: Cleaning up the HildonNamePassword dialog and
	renaming it to HildonLoginDialog.

2007-01-05  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-banner.c: Introducing static protos, removing the
	macrofied GType init, full the parent_class with proper value.

2007-01-05  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-banner.c:
	* src/hildon-banner.h:
	* src/hildon-note.c:
	* src/hildon-banner-private.h: Cleaning up the HildonBanner.

	* src/hildon-color-chooser-dialog-private.h:
	* src/hildon-color-chooser-dialog.c:
	* src/hildon-color-chooser-dialog.h: Fixing build.

2007-01-04  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-note.c:
	* src/hildon-note.h:
	* src/hildon-note-private.h: Cleaning up the HildonNote.

2007-01-04  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-date-editor-private.h:
	* src/hildon-date-editor.c:
	* src/hildon-date-editor.h: Cleaning up the date editor.

2007-01-03  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
