@@ -23,64 +23,67 @@
  *
  */
  
-#ifndef __HILDON_WIZARD_DIALOG_H__
-#define __HILDON_WIZARD_DIALOG_H__
+#ifndef                                         __HILDON_WIZARD_DIALOG_H__
+#define                                         __HILDON_WIZARD_DIALOG_H__
 
-#include <gtk/gtkwidget.h>
-#include <gtk/gtkwindow.h>
-#include <gtk/gtknotebook.h>
-#include <gtk/gtkdialog.h>
+#include                                        <gtk/gtkwidget.h>
+#include                                        <gtk/gtkwindow.h>
+#include                                        <gtk/gtknotebook.h>
+#include                                        <gtk/gtkdialog.h>
 
 G_BEGIN_DECLS
 
-#define HILDON_TYPE_WIZARD_DIALOG (hildon_wizard_dialog_get_type())
+#define                                         HILDON_TYPE_WIZARD_DIALOG \
+                                                (hildon_wizard_dialog_get_type())
 
-#define HILDON_WIZARD_DIALOG(obj) (GTK_CHECK_CAST ((obj), \
-            HILDON_TYPE_WIZARD_DIALOG, HildonWizardDialog))
+#define                                         HILDON_WIZARD_DIALOG(obj) (GTK_CHECK_CAST ((obj), \
+                                                HILDON_TYPE_WIZARD_DIALOG, HildonWizardDialog))
 
-#define HILDON_WIZARD_DIALOG_CLASS(klass) (GTK_CHECK_CLASS_CAST ((klass), \
-            HILDON_TYPE_WIZARD_DIALOG, HildonWizardDialogClass))
+#define                                         HILDON_WIZARD_DIALOG_CLASS(klass) \
+                                                (GTK_CHECK_CLASS_CAST ((klass), \
+                                                HILDON_TYPE_WIZARD_DIALOG, HildonWizardDialogClass))
 
-#define HILDON_IS_WIZARD_DIALOG(obj) (GTK_CHECK_TYPE ((obj), \
-            HILDON_TYPE_WIZARD_DIALOG))
+#define                                         HILDON_IS_WIZARD_DIALOG(obj) \
+                                                (GTK_CHECK_TYPE ((obj), \
+                                                HILDON_TYPE_WIZARD_DIALOG))
 
-#define HILDON_IS_WIZARD_DIALOG_CLASS(klass) (GTK_CHECK_CLASS_TYPE ((klass), \
-            HILDON_TYPE_WIZARD_DIALOG))
+#define                                         HILDON_IS_WIZARD_DIALOG_CLASS(klass) \
+                                                (GTK_CHECK_CLASS_TYPE ((klass), \
+                                                HILDON_TYPE_WIZARD_DIALOG))
 
-typedef struct _HildonWizardDialog HildonWizardDialog;
+typedef struct                                  _HildonWizardDialog HildonWizardDialog;
 
-typedef struct _HildonWizardDialogClass HildonWizardDialogClass;
-
-typedef struct _HildonWizardDialogPrivate HildonWizardDialogPrivate;
+typedef struct                                  _HildonWizardDialogClass HildonWizardDialogClass;
 
 /* button response IDs */
-typedef enum {
+
+typedef enum 
+{
     HILDON_WIZARD_DIALOG_CANCEL = GTK_RESPONSE_CANCEL,
     HILDON_WIZARD_DIALOG_PREVIOUS = 0,
     HILDON_WIZARD_DIALOG_NEXT,
     HILDON_WIZARD_DIALOG_FINISH
-} HildonWizardDialogResponse;
+}                                               HildonWizardDialogResponse;
 
-struct _HildonWizardDialog {
-    GtkDialog                   parent;
-    HildonWizardDialogPrivate   *priv;
+struct                                          _HildonWizardDialog 
+{
+    GtkDialog parent;
 };
 
-struct _HildonWizardDialogClass {
-    GtkDialogClass          parent_class;
-    void (*_gtk_reserved1)  (void);
-    void (*_gtk_reserved2)  (void);
-    void (*_gtk_reserved3)  (void);
-    void (*_gtk_reserved4)  (void);
+struct                                          _HildonWizardDialogClass 
+{
+    GtkDialogClass parent_class;
 };
 
+GType G_GNUC_CONST
+hildon_wizard_dialog_get_type                   (void);
 
-GType hildon_wizard_dialog_get_type   (void) G_GNUC_CONST;
-
-GtkWidget* hildon_wizard_dialog_new   (GtkWindow        *parent,
-                                       const char       *wizard_name,
-                                       GtkNotebook      *notebook);
+GtkWidget* 
+hildon_wizard_dialog_new                        (GtkWindow *parent,
+                                                 const char *wizard_name,
+                                                 GtkNotebook *notebook);
 
 G_END_DECLS
 
-#endif /* __HILDON_WIZARD_DIALOG_H__ */
+#endif                                          /* __HILDON_WIZARD_DIALOG_H__ */
+
